# tps6598x-ace-caldigit-fw-parser

./: .gitignore  README.md  pyproject.toml
tps6598x_ace_caldigit_fw_parser/: construct_typed_additions.py  firmware_image.py
tps6598x_ace_caldigit_fw_parser/tools/: parser.py  tps6598x_ace_caldigit_fw_parser.py
